--- a/lesson20/requirements.txt
+++ b/lesson20/requirements.txt
@@ -53,7 +53,7 @@ queuelib==1.6.2
 requests==2.31.0
 requests-file==1.5.1
 scrapy-fake-useragent==1.4.4
-selenium==4.11.2
+selenium
 service-identity==23.1.0
 six==1.16.0
 sniffio==1.3.0
@@ -68,7 +68,7 @@ trio-websocket==0.10.2
 typing_extensions==4.6.3
 tzdata==2023.3
 w3lib==2.1.2
-webdriver-manager==3.8.6
+webdriver-manager
 wsproto==1.2.0
 xmltodict==0.13.0
 zope.interface==6.1
