--- a/requirements.txt
+++ b/requirements.txt
@@ -36,15 +36,13 @@ pillow==10.2.0
 playwright
 pluggy==1.2.0
 Protego==0.3.0
-psycopg2==2.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 PyDispatcher==2.0.7
-pymongo==4.5.0
 pyOpenSSL==23.3.0
 PySocks==1.7.1
-pytest==7.4.0
+pytest
 pytest-html==4.1.1
 pytest-html-reporter==0.2.9
 pytest-metadata==3.0.0
@@ -67,10 +65,8 @@ tomli==2.0.1
 tqdm==4.65.0
 trio==0.22.0
 trio-websocket==0.10.2
-twisted-iocpsupport==1.0.4
 typing_extensions==4.6.3
 tzdata==2023.3
-urllib3==2.0.4
 w3lib==2.1.2
 webdriver-manager
 wsproto==1.2.0
